# app-drawer-rs

./: Cargo.toml  README.md
src/: app_launcher.rs  apps.rs  config.rs  current_apps.rs  error.rs  init_app.rs  main.rs  workspaces.rs
