[package]
name = "app-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
freedesktop-icon = "0.0.3"
guido = "0.5.0"
niri-ipc = "26.4.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
file-finder-linux = { git = "https://github.com/Coffee7Cup/file-finder-rs.git", branch = "main" }
linicon = "2.3.0"
freedesktop-icons = "0.4.0"
notify-rust = "4.18.0"
